src/test/ui/object-safety/object-safety-by-value-self.stderr
error: compilation successful
  --> $DIR/object-safety-by-value-self.rs:55:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

